# LearnOpenGL_2021

./: .gitignore  ReadMe.md
01_OpenGL_CreateWindow/: CMakeLists.txt  mac_GenerateXcodeproj.sh  win_GenerateVsProj.bat
01_OpenGL_CreateWindow/Src/: CMakeLists.txt  OpenGL_CreateWindow.cpp
02_OpenGL_Triangle/: CMakeLists.txt  GenerateVsProj.bat
02_OpenGL_Triangle/Src/: CMakeLists.txt  OpenGL_Triangle.cpp
03_OpenGL_Shader/: CMakeLists.txt  win_GenerateVsProj.bat
03_OpenGL_Shader/Src/: CMakeLists.txt  Fragment.glsl  OpenGL_Shader.cpp  Parallerlogram_VertexColor.cpp  Vertex.glsl
04_OpenGL_Texture/: CMakeLists.txt
04_OpenGL_Texture/Src/: CMakeLists.txt  Fragment.glsl  OpenGL_Texture.cpp  ShaderClass.hpp  Vertex.glsl
04_OpenGL_Texture/openGL_Depends/libs/: glfw3.lib
05_OpenGL_CoordinateSystem/: CMakeLists.txt  GenerateVsProj.bat
05_OpenGL_CoordinateSystem/Src/: CMakeLists.txt  Fragment.glsl  OpenGL_CoordinateSystem.cpp
05_OpenGL_Transform/: CMakeLists.txt  mac_GenerateXcodeproj.sh
05_OpenGL_Transform/Src/: CMakeLists.txt  Fragment.glsl  OpenGL_Transform.cpp  Vertex.glsl
05_OpenGL_Transform/openGL_Depends/include/SOIL/: stb_image_aug.h
06_OpenGL_CoordinateSystem/: CMakeLists.txt
06_OpenGL_CoordinateSystem/Src/: CMakeLists.txt  OpenGL_CoordinateSystem.cpp  Vertex.glsl
06_OpenGL_CoordinateSystem/openGL_Depends/include/: ShaderClass.hpp
06_OpenGL_CoordinateSystem/openGL_Depends/libs/: SOIL.lib
07_OpenGL_Camera/: CMakeLists.txt
07_OpenGL_Camera/Src/: CMakeLists.txt  Fragment.glsl  OpenGL_Camera.cpp
08_OpenGL_Color/: CMakeLists.txt  GenerateVsProj.bat  mac_GenerateXcodeproj.sh  win_GenerateVsProj.bat
08_OpenGL_Color/Src/: CMakeLists.txt  CameraController.hpp  Fragment.glsl  OpenGL_Color.cpp  ShaderClass.hpp
09_OpenGL_LightBasics/: CMakeLists.txt  GenerateVsProj.bat  mac_GenerateXcodeproj.sh  win_GenerateVsProj.bat
09_OpenGL_LightBasics/Src/: CMakeLists.txt  CameraController.hpp  Fragment.glsl  FragmentLight.glsl  OpenGL_LightBasics.cpp  ShaderClass.hpp  Vertex.glsl  VertexLight.glsl
Dependency/glew-2.0.0/: glew.pc
Dependency/soil-0.1.1/: CMakeLists.txt
openGL_Depends/include/SOIL/: image_dxt.h
openGL_Depends/libs/: glfw3d.lib
